Bug #18839 return value of parser->parse() is ignored
Submitted: 6 Apr 2006 11:17 Modified: 18 Jun 2007 19:10
Reporter: Sergei Golubchik
Status: Closed
Category:Server: UDF Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Sergey Vojtovich Target Version:

[6 Apr 2006 11:17] Sergei Golubchik
Description:
return value of parser->parse() is ignored
(parse() may fail if it does, for example, memory allocations)

How to repeat:
see ft_boolean_search.c for example
[19 Apr 2007 10:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24892

ChangeSet@1.2567, 2007-04-19 12:57:58+05:00, svoj@mysql.com +2 -0
  BUG#18839 - return value of parser->parse() is ignored
  
  Check value returned by parser->parse(). Better handle situations
  when it fails.
[8 May 2007 15:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26303

ChangeSet@1.2511, 2007-05-08 22:50:45+05:00, svoj@mysql.com +2 -0
  BUG#18839 - return value of parser->parse() is ignored
  
  Check value returned by parser->parse(). Better handle situations
  when it fails.
[28 May 2007 11:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/27434

ChangeSet@1.2515, 2007-05-28 13:27:26+05:00, svoj@mysql.com +2 -0
  BUG#18839 - return value of parser->parse() is ignored
  
  Check value returned by parser->parse(). Better handle situations
  when it fails.
[18 Jun 2007 9:48] Bugs System
Pushed into 5.1.20-beta
[18 Jun 2007 19:10] Paul DuBois
Noted in 5.1.20 changelog.

The server was ignoring the return value of the parse() function for
full-text parser plugins.