BUG#18839 - return value of parser->parse() is ignored

Check value returned by parser->parse(). Better handle situations
when it fails.